# knights-tour

./: .gitignore  LICENSE  README.md  knight.py  pyproject.toml
.github/workflows/: github-actions.yml
src/knights_tour/: board.py  board_visualizer.py  knights_tour_solver.py
src/tour/: knight.py  solver.py
tests/: test_board.py  test_knight.py  test_knights_tour_solver.py  test_solver.py
