[project]
name = "knight"
version = "0.1.0"
description = "Knight's Tour Problem Solver"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = ["--import-mode=importlib", ]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.3.4",
]
